# DD-graphDB

./: .gitignore  BUILD_FIXES.md  BUILD_STATUS_REPORT.md  Cargo.toml  Cargo.toml.backup  Cargo_demo.toml  Cargo_workspace.toml  DESIGN_DETAILS.md  DESIGN_OVERVIEW.md  FINAL_REPORT.md  IMPLEMENTATION_STATUS.md  INCREMENTAL_ENGINE_COMPLETE.md  INCREMENTAL_ENGINE_DETAILS.md  INCREMENTAL_ENGINE_STATUS.md  MATERIALIZED_VIEWS_COMPLETE.md  PHASE1_COMPLETE.md  PROJECT_STATUS.md  README.md  REALTIME_STREAM_PROCESSING_COMPLETE.md  SESSION_PROGRESS_COMPLETE.md  SETUP_SUMMARY.md  TECHNICAL_SPECIFICATION.md  VISUAL_DEMO_REPORT.md  WORKSPACE_GUIDE.md  build_check.sh  interactive_visual_demo.sh  run_demo.sh  show_architecture.sh  show_incremental_value.sh  show_visual_demo.sh  simple_demo  simple_demo.rs  test_basic.rs  test_checkpoint.sh  test_input.txt  visual_demo.rs  visual_demo_fixed  visual_demo_fixed.rs
--features/: graph.snap
docs/plans/: 2026-02-09-stabilize-and-extend.md
graph/algorithms/: Cargo.toml
graph/algorithms/src/: basic.rs  lib.rs
graph/collection/: Cargo.toml
graph/collection/src/: lib.rs
graph/core/: Cargo.toml  liblib.rlib
graph/core/src/: lib.rs  liblib.rlib
graph/distributed/: Cargo.toml
graph/distributed/src/: cluster.rs  lib.rs
graph/query/: Cargo.toml
graph/query/src/: executor.rs  gql.pest  lib.rs
graph/server/: Cargo.toml
graph/server/src/: lib.rs
graph/storage/: Cargo.toml
graph/storage/src/: lib.rs
graph/views/: ARCHITECTURE.md  Cargo.toml
graph/views/src/: cache_manager.rs  differential_dataflow.rs  incremental_engine.rs  lib.rs  multilevel_cache.rs  query_router.rs  realtime_analytics.rs  sql_parser.rs  storage_integration.rs  stream_connectors.rs  stream_processing.rs  stream_source_manager.rs  stream_transform.rs  view_registry.rs  view_types.rs  windowed_operations.rs
graph_data/: graph.snap  graph.wal
src/: APPLICATION_EXAMPLES.md  algo_demo.rs  api_service.rs  demo.rs  demo_app  incremental_demo.rs  incremental_quick_demo.rs  integrated_demo.rs  interactive_demo.txt  main.rs  main_demo.rs  materialized_views_demo.rs  query_demo.rs  simple_integrated_demo.rs  simple_query_test.rs  simple_stream_demo.rs  social_network_platform.rs  stream_demo.rs  streaming_analytics_demo.rs  test_sql_view.rs
