[package]
name = "graph-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true, optional = true }
thiserror = { workspace = true }
anyhow = { workspace = true }

[features]
default = []
serde = ["dep:serde"]
